# trade78

./: .gitignore  Dockerfile  Dockerfile.all  LICENSE  Taskfile.yml  pyproject.toml
hooks/: doc.md  dockerall.sh  dockercopy.sh  model.md  optimizer.yaml  pre-push  trade78.yaml
src/: main.py
src/basic/: __init__.py  center.py  config78.py  task_thread_pool.py
src/center/: optimizer.py  strategy.py  task_scheduler.py
src/config/: config.ini
src/trade/: Table.txt  grid.py  readme  自选股.txt
