[tool.poetry]
name = "trade78"
version = "0.1.7"
description = "Simplest and easiest to use quantitative trading automation"
authors = ["Frieda.Hu <www778878net@189.cn>"]
packages = [
    { include = "basic", from = "src" },
 { include = "center", from = "src" },
  { include = "trade", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
asyncio = "^3.4.3"
log78 =  "2.1.2"
upinfopy = "^0.1.26"
pandas = "^2.2.3"
numpy = "^2.1.2"
tushare = "^1.4.13"
configobj = "^5.0.9"





[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
priority = "primary"



[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"


